fix: removes default text align center in style rows

--- a/recordm/customUI/css/_styleResults.css
+++ b/recordm/customUI/css/_styleResults.css
@@ -68,29 +68,14 @@
 	background-color:#bebebe;
 }
 
-
 .BgRed,
 .BgGreen,
 .BgBlue, 
 .BgOrange,
 .BgGray {
   color: white;
+}
+
+.cobStyleColummn{
   text-align: center;
-} 
-.Red,
-.Green,
-.Blue,
-.Orange,
-.Gray,
-.DimRed,
-.DimGreen,
-.DimBlue,
-.DimOrange,
-.DimGray,
-.BgDimRed,
-.BgDimGreen,
-.BgDimBlue, 
-.BgDimOrange,
-.BgDimGray {
-	text-align: center;
 }
